Update links in README.md - Public update

--- a/PortfolioChoiceWithRiskyHousing-NoAppendix.tex
+++ b/PortfolioChoiceWithRiskyHousing-NoAppendix.tex
@@ -305,8 +305,7 @@ A result that is consistent with \texttt{ConsPortfolioModel} is that younger hou
 \clearpage\vfill\eject
 
 % \onlyinsubfile{\input{\LaTeXInputs/bibliography_blend}}
-% \onlyinsubfile{\bibliography{\econtexRoot/PortfolioChoiceWithRiskyHousing}}
-\input{\LaTeXInputs/bibliography_blend}
+\onlyinsubfile{\input{\LaTeXInputs/bibliography_blend}}
 \end{document}
 \endinput
 
