--- a/Tables/texmf-local/tex/latex/econtexShortcuts.sty
+++ b/Tables/texmf-local/tex/latex/econtexShortcuts.sty
@@ -15,9 +15,6 @@
 \providecommand{\aMin}{\ensuremath{\underline{\aRat}}}
 \providecommand{\ARat}{\ensuremath{A}}
 \providecommand{\aRat}{\ensuremath{a}}
-\providecommand{\ARat}{\ensuremath{A}}
-\providecommand{\aRat}{\ensuremath{a}}
-\providecommand{\aRatBF}{\ensuremath{\pmb{a}}}
 \providecommand{\ASS}{\ensuremath{\ensuremath{A}}}
 \providecommand{\aSS}{\ensuremath{\ensuremath{a}}}
 \providecommand{\ATarg}{\ensuremath{\check{A}}}
@@ -38,7 +35,6 @@
 \providecommand{\bRatU}{\ensuremath{b}^{u}}
 \providecommand{\BRat}{\ensuremath{B}}
 \providecommand{\bRat}{\ensuremath{b}}
-\providecommand{\bRatBF}{\ensuremath{\pmb{\mathrm{b}}}}
 \providecommand{\bTargE}{\ensuremath{\check{b}^{e}}}
 \providecommand{\BTargTarg}{\Target{\Target{\BRat}}}
 \providecommand{\bTargTarg}{\Target{\Target{\bRat}}}
@@ -115,9 +111,8 @@
 \providecommand{\Discount}{\ensuremath{\beta}}
 \providecommand{\DiscRate}{\ensuremath{\vartheta}}
 \providecommand{\DiscRte}{\ensuremath{\vartheta}} % New
-\providecommand{\discRte}{\ensuremath{\vartheta}} % New
 \providecommand{\DiscFac}{\ensuremath{\beta}} % New
-\providecommand{\DivGro}{\ensuremath{\mathrm{G}}}
+\providecommand{\DivGro}{\ensuremath{\mathsf{G}}}
 \providecommand{\divGro}{\ensuremath{\mathsf{g}}}
 \providecommand{\Div}{\ensuremath{D}}
 % \providecommand{\div}{\ensuremath{d}} reserved for divide 
@@ -261,7 +256,6 @@
 \providecommand{\mRatE}{\mRat^{e}}
 \providecommand{\MRat}{\ensuremath{M}}
 \providecommand{\mRat}{\ensuremath{m}}
-\providecommand{\mRatBF}{\ensuremath{\pmb{\mathrm{m}}}}
 \providecommand{\MSS}{\ensuremath{\breve{M}}}
 \providecommand{\mSS}{\ensuremath{\breve{m}}}
 \providecommand{\mTarg}{\check{m}}
@@ -285,8 +279,8 @@
 \providecommand{\ORat}{\ensuremath{O}}
 \providecommand{\oRat}{\ensuremath{o}}
 \providecommand{\Pareto}{\zeta}
-\providecommand{\PatPGroAdj}{\text{\pmb{\Thorn}}_{\underline{\PGro}}}
-\providecommand{\patpGroAdj}{\text{\thorn}_{\underline{\pGro}}}
+\providecommand{\PatPGroAdj}{\text{\pmb{\Thorn}}_{\acute{\PGro}}}
+\providecommand{\patpGroAdj}{\text{\thorn}_{\acute{\pGro}}}
 \providecommand{\patpGrohat}{\hat{\text{\thorn}}_{\pGro}}
 \providecommand{\PatPGro}{\text{\pmb{\Thorn}}_{\PGro}}
 \providecommand{\patpGro}{\text{\thorn}_{\pGro}}
@@ -303,8 +297,6 @@
 \providecommand{\pDieRate}{\ensuremath{\grave{\mathsf{d}}}}
 \providecommand{\pDies}{\ensuremath{\mathsf{d}}} % Continuous time death rate 
 \providecommand{\PDies}{\ensuremath{\mathsf{D}}} % Discrete-time one-period death rate
-\providecommand{\diePrb}{\ensuremath{\mathsf{d}}} % Continuous time death rate 
-\providecommand{\DiePrb}{\ensuremath{\mathsf{D}}} % Discrete-time one-period death rate
 \providecommand{\PDV}{\ensuremath{\mathbb{P}}} % PDV
 \providecommand{\PGroAdj}{\ensuremath{\underline{\PGro}}}
 \providecommand{\pGroAdj}{\ensuremath{\underline{\pGro}}}
@@ -312,8 +304,6 @@
 \providecommand{\pGrouAdj}{\ensuremath{\underline{\underline{{\pGro}}}}}
 \providecommand{\PGro}{\ensuremath{\Gamma}}
 \providecommand{\pGro}{\ensuremath{\gamma}}
-\providecommand{\permGroFac}{\ensuremath{\Gamma}} % Econ-ARK
-\providecommand{\permGroRte}{\ensuremath{\gamma}} % Econ-ARK
 \providecommand{\phiFunc}{\ensuremath{\digamma}}
 \providecommand{\PIHMPC}{\ensuremath{\varkappa}}
 \providecommand{\PInc}{\ensuremath{P}}
@@ -322,11 +312,8 @@
 \providecommand{\PLevBF}{\ensuremath{\mathbf{P}}}
 \providecommand{\pLevBF}{\ensuremath{\mathbf{p}}}
 \providecommand{\PLev}{\ensuremath{P}}
-\providecommand{\pLog}{\ensuremath{p}}
 \providecommand{\pLev}{\ensuremath{\pmb{p}}}
 \providecommand{\PLev}{\ensuremath{P}}
-\providecommand{\LivPrb}{\ensuremath{\cancel{\DiePrb}}}
-\providecommand{\livPrb}{\ensuremath{\cancel{\diePrb}}}
 \providecommand{\PLives}{\ensuremath{\cancel{\PDies}}}
 \providecommand{\pLives}{\ensuremath{\cancel{\pDies}}}
 %\providecommand{\pNotZero}{\ensuremath{\cancel{\wp}}}
@@ -456,8 +443,7 @@
 \providecommand{\Target}{\check}
 \providecommand{\TaxCombInv}{\ensuremath{\mathcal{T}^{-1}}}
 \providecommand{\TaxComb}{\ensuremath{\mathcal{T}}}
-\providecommand{\TaxCorp}{\ensuremath{\Large \tau}}
-\providecommand{\taxCorp}{\ensuremath{\tau}}
+\providecommand{\TaxCorp}{\ensuremath{\tau}}
 \providecommand{\taxDep}{\ensuremath{\partial}}
 \providecommand{\TaxFree}{\ensuremath{\cancel{\Tax}}}
 \providecommand{\TaxLev}{T}
@@ -557,8 +543,8 @@
 \providecommand{\Wend}{\ARat} % Wealth as of the end of the period (after C has been chosen)
 \providecommand{\wend}{\aRat} % wealth as of the end of the period (after C has been taken)
 \providecommand{\wFunc}{\mathrm{w}}
-\providecommand{\WGroPF}{\ensuremath{\mathrm{G}}}
-\providecommand{\WGro}{\ensuremath{\mathrm{G}}}
+\providecommand{\WGroPF}{\ensuremath{\mathsf{G}}}
+\providecommand{\WGro}{\ensuremath{\mathsf{G}}}
 \providecommand{\wGro}{\ensuremath{\mathsf{g}}}
 \providecommand{\whumMin}{\underline{\hRat}} % human wealth -- individual
 \providecommand{\WHum}{\HLev} % Human wealth -- aggregate 
@@ -614,10 +600,11 @@
 \providecommand{\ZRat}{\ensuremath{Z}}
 \providecommand{\zRat}{\ensuremath{z}}
 
-\providecommand{\DieFac}{\pDead}
-\providecommand{\LivFac}{\Alive}
-\providecommand{\PopFac}{\PopGro}
-\providecommand{\popRte}{\popGro}
+\newcommand{\discRte}{\omega}
+\newcommand{\DieFac}{\pDead}
+\newcommand{\LivFac}{\Alive}
+\newcommand{\PopFac}{\PopGro}
+\newcommand{\popRte}{\popGro}
 
 
 \providecommand{\NFALev}{\NLev}
@@ -640,30 +627,5 @@
 \providecommand{\recm}{}
 \renewcommand{\recm}{\item[\phantom{$^{*}$}]}
 
-\providecommand{\pd}[2]{\frac{\partial#1}{\partial#2}}
-
-
-% Ensure that you're in math mode when using the \cancel command (otherwise tex4ht produces bad output)
-\providecommand{\cncl}{}
-\renewcommand\cncl[1]{\ensuremath{\cancel{#1}}}
-
-% Define the handles for the various conditions
-\providecommand{\constr}{}
-\renewcommand{\constr}[1]{\grave{#1}}
-
-%\renewcommand{\PFGPF}{{\mbox{PF-GPF}}}
-%\renewcommand{\PFGIC}{{\mbox{PF-GIC}}}
-%\renewcommand{\AIC}{{\mbox{AIC}}}
-%\renewcommand{\PFFVAC}{{\mbox{PF-FVAC}}}
-%\renewcommand{\PFVAF}{{\mbox{PF-VAF}}}
-%\renewcommand{\FVAC}{{\mbox{FVAC}}}
-%\renewcommand{\FVAF}{{\mbox{FVAF}}}
-%\renewcommand{\GIC}{{\mbox{GIC}}}
-%\renewcommand{\GICAgg}{{\mbox{GIC-Agg}}}
-%\renewcommand{\RIC}{{\mbox{RIC}}}
-%\renewcommand{\WRIC}{{\mbox{WRIC}}}
-%\renewcommand{\FHWC}{{\mbox{FHWC}}}
-%\renewcommand{\RPF}{{\mbox{RPF}}}
-%\renewcommand{\GPF}{{\mbox{GPF}}}
-%\renewcommand{\FHWF}{\mbox{FHWF}}
+\newcommand{\pd}[2]{\frac{\partial#1}{\partial#2}}
 
